# Stellar_Hackaton

contrato_secure_ticket/: Cargo.toml
contrato_secure_ticket/contracts/secure_ticket_contract/: Cargo.toml
contrato_secure_ticket/contracts/secure_ticket_contract/src/: lib.rs  test.rs
contrato_secure_ticket/contracts/secure_ticket_contract/test_snapshots/test/: test_buy_ticket_not_for_sale_panics.1.json  test_buy_ticket_transfers_token.1.json  test_buy_ticket_with_insufficient_funds_panics.1.json  test_create_ticket_with_zero_price.1.json  test_get_event_tickets.1.json  test_get_resale_tickets.1.json  test_initialize_and_create_ticket.1.json  test_initialize_twice_panics.1.json  test_primary_sale_transfers_token.1.json  test_resell_ticket_twice_panics.1.json
